# workflow-orchestrator

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 670184fe5c6d_initial_migration.py
docs/: ALGORITHMS.md  ARCHITECTURE.md  TESTING_RESILIENCE.md
infrastructure/: .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/lib/: config.ts  workflow-stack.ts
infrastructure/lib/constructs/: api-service.ts  background-service.ts  cache.ts  cluster.ts  database.ts  monitoring.ts  networking.ts
infrastructure/lib/environments/: dev.config.ts  prod.config.ts
infrastructure/lib/utils/: index.ts  prefix.ts  tag.ts
infrastructure/scripts/: deploy.sh  destroy.sh
payloads/: complex_dag.json  conditional_branching.json  linear_workflow.json  llm_service.json  parallel_api_fetcher.json  parallel_fanout.json  template_resolution.json  timeout_test.json
scripts/: demo_reaper_dlq.py  init.sh  load_test.py  run_e2e.sh  run_load_test.sh  test_api.sh
src/: main.py  orchestrator.py  worker.py
src/domain/resilience/: __init__.py
src/domain/workflow/: exceptions.py
src/ports/secondary/: dlq_repository.py  execution_repository.py  message_broker.py  metrics.py  rate_limiter.py  state_store.py  workflow_repository.py
src/shared/: circuit_breaker.py  config.py  database.py  logger.py  metrics.py  redis_client.py
tests/domain/: test_dag.py  test_execution.py  test_template.py
tests/e2e/: __init__.py  test_workflow_cancellation.py  test_workflow_timeout.py
tests/integration/: test_resilience_features.py  test_workflow_api_errors.py  test_workflow_concurrency.py  test_workflow_dag_validation.py  test_workflow_patterns.py
tests/unit/: test_runners.py  test_schema_versioning.py
tests/unit/adapters/: test_api_routes.py  test_circuit_breaker_manager.py  test_dlq.py  test_dlq_repository_extended.py  test_dlq_routes.py  test_persistence_repos.py  test_rate_limit_middleware.py  test_rate_limiter.py  test_rate_limiter_load.py  test_redis.py
tests/unit/application/: test_orchestrate.py  test_specialized_workers.py  test_use_cases.py  test_worker_dlq.py  test_workers.py  test_workflow_use_cases.py
tests/unit/domain/: test_circuit_breaker.py  test_dag.py  test_template.py  (+1 more)
(+42 files in other folders)
